# ECOv002-CMR

./: Concept ID.ipynb  ECOSTRESS CMR Search.ipynb  ECOSTRESS Granule Download.ipynb  POINT_SAMPLING_INTEGRATION.md  Querying ECOSTRESS at points.ipynb  README.md  debug_lst_sampling.py  debug_stars_search.py  ecostress_LST_11SLT_2025-06-01_2025-06-30.csv  ecostress_multivar_11SLT_2025-06-01_2025-06-30.csv  makefile  pyproject.toml  querying_ECOSTRESS_at_points.py  test_drop_na.py  test_parallel_performance.py
ECOv002_CMR/: ECOSTRESS_CMR_search.py  ECOSTRESS_CMR_search_links.py  ECOv002_CMR.py  __init__.py  authentication.py  concept_ID_from_DOI.py  constants.py  download_ECOSTRESS_granule_files.py  granule_ID.py  interpret_ECOSTRESS_URLs.py  point_sampling.py  process_orbit_scene_tile_URLs.py  process_tile_URLs.py  variable_from_filename.py  version.py
examples/: README.md  csv_to_geodataframe_demo.py  geodataframe_sampling_demo.py  point_sampling_demo.py
tests/: test_point_sampling.py
