[build-system]
requires = ["setuptools>=60", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ECOv002_CMR"
version = "1.1.0"
description = "Common Metadata Repository (CMR) Search for ECOSTRESS Collection 2"
readme = "README.md"
authors = [
    { name = "Gregory H. Halverson", email = "gregory.h.halverson@jpl.nasa.gov" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "colored-logging",
    "ECOv002-granules",
    "geopandas",
    "numpy",
    "pandas",
    "rasterio",
    "rasters>=1.16.1",
    "requests",
    "sentinel-tiles>=1.1.1",
    "shapely",
    "tqdm"
]

requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "build",
    "pytest>=6.0",
    "pytest-cov",
    "jupyter",
    "pytest",
    "twine"
]

[project.urls]
"Homepage" = "https://github.com/ECOSTRESS-Collection-2/ECOv002-CMR"

[tool.setuptools.packages.find]
include = ["ECOv002_CMR"]
exclude = ["data", "build", "tests"]
